methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:9: error: method banane overrides nothing
override def banane() {
             ^